--- a/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
+++ b/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
@@ -22,6 +22,7 @@
   width: vw-1490(306);
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   & > a:hover > svg {
     color: var(--color-accent-orange);
   }
@@ -36,7 +37,7 @@
   text-decoration: none;
 
   border-radius: 6px;
-  padding: 16px 12px;
+  padding: vw-1490(16) vw-1490(12);
   & > h4 {
     width: 100%;
   }
@@ -45,12 +46,20 @@
     cursor: pointer;
     background-color: var(--color-grey-1);
   }
+
+  @media (max-width: 768px) {
+    padding: 16px 12px;
+  }
 }
 
 .iconCategory {
-  width: 22px;
-  height: 22px;
+  width: vw-1490(22);
+  height: vw-1490(22);
   flex-shrink: 0;
+  @media (max-width: 768px) {
+    width: 22px;
+    height: 22px;
+  }
 }
 
 .active {
