--- a/src/shared/ui/toast/Toast.module.scss
+++ b/src/shared/ui/toast/Toast.module.scss
@@ -29,6 +29,10 @@
     width: 100%;
     gap: 12px;
 
+    & > svg {
+      color: var(--color-bg);
+    }
+
     .content {
       display: flex;
       flex-direction: column;
