--- a/src/components/item/Item.module.scss
+++ b/src/components/item/Item.module.scss
@@ -11,6 +11,10 @@
     position: relative;
     width: vw-1490(306);
     height: vw-1490(306);
+    @media (max-width: 768px) {
+      width: 160px;
+      height: 160px;
+    }
   }
   @media (max-width: 768px) {
     gap: 6px;
@@ -27,9 +31,17 @@
     position: relative;
     width: vw-1490(110);
     height: vw-1490(110);
+    @media (max-width: 768px) {
+      width: 110px;
+      height: 110px;
+    }
   }
   .text {
     height: 1rem;
+  }
+
+  @media (max-width: 768px) {
+    gap: 16px;
   }
 }
 
@@ -74,6 +86,10 @@
   opacity: 0.6;
   width: fit-content;
   border-radius: 4px;
+
+  @media (max-width: 768px) {
+    padding: 2px 4px;
+  }
 }
 
 .favoriteButton {
@@ -83,6 +99,10 @@
   z-index: 1000;
   padding: 0;
   color: #21253126;
+  @media (max-width: 768px) {
+    right: 16px;
+    top: 16px;
+  }
 }
 
 .active {
@@ -110,6 +130,9 @@
   text-overflow: ellipsis;
   white-space: normal;
   height: 3rem;
+  @media (max-width: 768px) {
+    margin-bottom: 8px;
+  }
 }
 .priceContainer {
   display: flex;
@@ -123,11 +146,19 @@
     color: var(--color-grey-2);
     text-decoration: line-through;
   }
+
+  @media (max-width: 768px) {
+    gap: 8px;
+    margin-bottom: 8px;
+  }
 }
 
 .buttonContainer {
   display: flex;
   gap: vw-1490(12);
+  @media (max-width: 768px) {
+    gap: 12px;
+  }
 }
 
 .buttonVertical {
@@ -137,6 +168,11 @@
   font-size: vw-1490(16);
   font-weight: 400;
   line-height: vw-1490(22.4);
+
+  @media (max-width: 768px) {
+    width: 130px;
+    height: 38px;
+  }
 }
 
 .buttonHorizontal {
