--- a/src/components/subcategory/Subcategory.module.scss
+++ b/src/components/subcategory/Subcategory.module.scss
@@ -1,19 +1,33 @@
+@import "../../shared/styles/functions";
+
 .card {
-    width: 196px;
+  width: vw-1490(196);
+  height: vw-1490(196);
+  padding: 16px;
+  box-sizing: border-box;
+  border-radius: 6px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+
+  box-shadow: 2px 3px 7px 0px #2225310d;
+
+  & > .imageContainer {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+
+  &:hover {
+    box-shadow: 6px 12px 13px 0px #22253120;
+  }
+
+  @media (max-width: 768px) {
+    width: 160px;
     height: 196px;
-    
-    border-radius: 6px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center ;
-    text-align: center;
-    text-decoration: none;
-
-    box-shadow: 2px 3px 7px 0px #2225310D;
-    
-    @media (max-width: 768px) {
-        width: 160px;
-    }
+  }
 }
