--- a/src/features/Category/category-tags/CategoryTags.module.scss
+++ b/src/features/Category/category-tags/CategoryTags.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 36px;
+  gap: vw-1490(36);
 
   & > h1 {
     text-align: center;
@@ -13,7 +13,11 @@
       line-height: 26.07px;
     }
   }
+  @media (max-width: 768px) {
+    gap: 32px;
+  }
 }
+
 .categoryContainer {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
